frontend: profile, rating

--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -3,17 +3,18 @@
 
 <head>
     <meta charset="utf-8">
+    <meta name="author" content="PiBu" />
+    <meta name="description" content="Evaluate other people and compare to them" />
+    <meta name="keywords" content="Soulrate" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="icon" href="<%= BASE_URL %>icon/favicon.ico">
-    <title>
-        <%= htmlWebpackPlugin.options.title %>
-    </title>
+    <title>Soulrate</title>
 </head>
 
 <body>
     <noscript>
-      <strong>We're sorry but <%= htmlWebpackPlugin.options.title %> doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
+      <strong>We're sorry but Soulrate doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
     </noscript>
     <div id="app"></div>
     <!-- built files will be auto injected -->
